# automated-pdm

./: .gitignore  LICENSE  README.md  docker-compose.yml
agent_rul/: pyproject.toml
agent_rul/src/agent_rul/: __init__.py  gls.py  hybrid.py  standalone.py
agent_rul/src/agent_rul/agents/: config_agent.py  manager_agent.py  model_agent.py  prompt_agent.py  shared.py
agent_rul/src/agent_rul/agents/utils/: json_utils.py  message.py  model_report.py  prompt_render.py
agent_rul/src/agent_rul/config/: logger_config.json
agent_rul/src/agent_rul/data/: data_inspection.py  data_schema.py
agent_rul/src/agent_rul/pipeline_configs/: rul_pipeline_template.yml
agent_rul/src/agent_rul/prompts/: config_agent.system.md  config_agent.task.md  manager_agent.system.md  manager_agent.task.md  model_agent.system.md  prompt_agent.system.md
agent_rul/src/agent_rul/prompts/knowledge/: femto.md
agent_rul/src/agent_rul/prompts/user_informations/: cmapps_fd1.md  cmapps_fd2.md  cmapps_fd3.md  cmapps_fd4.md  femto.md
agent_rul/src/agent_rul/tools/: mlflow_results.py  model_inspection.py  ray_results.py  register_model.py  save_model.py  user_info.py  utils.py  yml_handler.py
agent_rul/src/agent_rul/utils/: setup.py
auto_rul/: pyproject.toml
auto_rul/src/auto_rul/: __init__.py  main.py
auto_rul/src/auto_rul/utils/: config_path.py  setup.py
rul_lib/: pyproject.toml
rul_lib/src/rul_lib/: enums.py
rul_lib/src/rul_lib/data/: data_loader.py  dowsample.py  registry.py
rul_lib/src/rul_lib/eval/: eval_rul.py
rul_lib/src/rul_lib/gls/: gls.py
rul_lib/src/rul_lib/model_registry/: load.py  utils.py
rul_lib/src/rul_lib/optimization/: actors.py  ray_logger.py  ray_utils.py  trainer.py
rul_lib/src/rul_lib/pipeline/: pipe.py
rul_lib/src/rul_lib/pipeline/fe/: feature_extraction.py  models.py  parser.py  window.py
rul_lib/src/rul_lib/training/: loss.py  train_logger.py  trainer.py  tune_reporter.py  utils.py
rul_lib/src/rul_lib/utils/: dict_utils.py  json_utils.py  logger.py  search_space.py  tracking.py  visualize.py
(+25 files in other folders)
