[project]
name = "auto-rul"
version = "0.0.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "joshoua-bigler", email = "joshoua.bigler@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
  "rul-lib>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

