[project]
name = "rul-lib"
version = "1.0.0"
description = "A library for remaining useful life (RUL) prediction using machine learning and deep learning techniques."
authors = [
    { name = "joshoua-bigler", email = "joshoua.bigler@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
  "optuna>=4.5.0",
  "xgboost>=3.0.5",
  "torchsummary>=1.5.1",
  "tsfresh>=0.21.1",
  "numpy>=2.3.2",
  "pandas>=2.3.2",
  "pydantic>=2.11.7",
  "torch>=2.8.0",
  "tensorboard>=2.20.0",
  "stumpy==1.13.0",
  "scikit-learn>=1.7.1",
  "llvmlite==0.45.0",
  "ray>=2.49.1",
  "mlflow==2.22.0",
  "python-dotenv>=1.1.1",
  "matplotlib>=3.10.6",
]

[project.scripts]
rul-lib = "rul_lib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['src/rul_lib']

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true